[project]
name = "step-by-step-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.2.0,<1.3.0",
    "google-genai>=1.16.1",
    "litellm>=1.72.9",
    "pg8000==1.31.2",
    "psycopg2-binary==2.9.10",
    "pip==25.1.1",
    "psutil==7.0.0",
    "requests==2.32.4",
    "python-dotenv==1.1.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.7",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "pinecone==6.0.0",      
    "langchain==0.3.25",             
    "streamlit==1.45.1",
    "pyreadline3==3.5.4",
    "authlib==1.6.0",
    "PyMuPDF==1.26.1",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "odfpy==1.4.1",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
]
